--- a/65TES_GiovanniJakubiak_DouglasBussmann/nbproject/project.properties
+++ b/65TES_GiovanniJakubiak_DouglasBussmann/nbproject/project.properties
@@ -28,6 +28,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.selenium-java-client-driver-1.0.1.jar=C:\\Users\\giova\\Desktop\\UDESC\\6SEXTA_FASE\\TESTES DE SOFTWARE\\selenium-java-client-driver-1.0.1.jar
+file.reference.Selenium_WebDriver-selenium-java-3.4.0=C:\\Users\\giova\\Desktop\\UDESC\\6SEXTA_FASE\\TESTES DE SOFTWARE\\Selenium WebDriver\\selenium-java-3.4.0
+file.reference.SeleniumRC-Selenium_RC=C:\\Users\\giova\\Desktop\\UDESC\\6SEXTA_FASE\\TESTES DE SOFTWARE\\SeleniumRC\\Selenium RC
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,7 +44,11 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Selenium_WebDriver-selenium-java-3.4.0}:\
+    ${libs.junit_4.classpath}:\
+    ${file.reference.selenium-java-client-driver-1.0.1.jar}:\
+    ${file.reference.SeleniumRC-Selenium_RC}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -68,7 +75,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
