Testes de sistema prontos
Finalizei os testes de sistemas
Importei corretamente os jars
Coloquei mascaras nos campos

--- a/65TES_GiovanniJakubiak_DouglasBussmann/nbproject/project.properties
+++ b/65TES_GiovanniJakubiak_DouglasBussmann/nbproject/project.properties
@@ -28,9 +28,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.selenium-java-client-driver-1.0.1.jar=C:\\Users\\giova\\Desktop\\UDESC\\6SEXTA_FASE\\TESTES DE SOFTWARE\\selenium-java-client-driver-1.0.1.jar
-file.reference.Selenium_WebDriver-selenium-java-3.4.0=C:\\Users\\giova\\Desktop\\UDESC\\6SEXTA_FASE\\TESTES DE SOFTWARE\\Selenium WebDriver\\selenium-java-3.4.0
-file.reference.SeleniumRC-Selenium_RC=C:\\Users\\giova\\Desktop\\UDESC\\6SEXTA_FASE\\TESTES DE SOFTWARE\\SeleniumRC\\Selenium RC
+file.reference.client-combined-3.4.0-nodeps.jar=C:\\Users\\giova\\Desktop\\UDESC\\6SEXTA_FASE\\TESTES DE SOFTWARE\\importsSelenium\\client-combined-3.4.0-nodeps.jar
+file.reference.junit-4.10.jar=C:\\Users\\giova\\Desktop\\UDESC\\6SEXTA_FASE\\TESTES DE SOFTWARE\\importsSelenium\\junit-4.10.jar
+file.reference.selenium-java-client-driver-1.0.1.jar=C:\\Users\\giova\\Desktop\\UDESC\\6SEXTA_FASE\\TESTES DE SOFTWARE\\importsSelenium\\selenium-java-client-driver-1.0.1.jar
+file.reference.selenium-server-standalone-3.4.0.jar=C:\\Users\\giova\\Desktop\\UDESC\\6SEXTA_FASE\\TESTES DE SOFTWARE\\importsSelenium\\selenium-server-standalone-3.4.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,10 +46,10 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.Selenium_WebDriver-selenium-java-3.4.0}:\
-    ${libs.junit_4.classpath}:\
+    ${file.reference.client-combined-3.4.0-nodeps.jar}:\
+    ${file.reference.junit-4.10.jar}:\
     ${file.reference.selenium-java-client-driver-1.0.1.jar}:\
-    ${file.reference.SeleniumRC-Selenium_RC}
+    ${file.reference.selenium-server-standalone-3.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
